--- a/SportsSideKick/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_forgot_password.xml
@@ -13,23 +13,23 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="160dp"
+            android:layout_height="@dimen/login_logo_height"
             android:contentDescription="@null"
             android:src="@drawable/logo_sporting" />
 
 
         <LinearLayout
-            android:layout_width="220dp"
+            android:layout_width="@dimen/login_conteiner_width"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="20dp">
+                android:layout_marginBottom="@dimen/margin_10"
+                android:layout_marginLeft="@dimen/margin_5"
+                android:layout_marginRight="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_20">
 
 
                 <TextView
@@ -45,7 +45,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginRight="3dp"
+                    android:layout_marginRight="@dimen/half_margin"
                     android:layout_centerVertical="true"
                     android:background="@android:color/white"
                     android:layout_toStartOf="@id/forgot_password_reset_text"
@@ -56,7 +56,7 @@
                     android:layout_height="1dp"
                     android:layout_centerVertical="true"
                     android:background="@android:color/white"
-                    android:layout_marginLeft="3dp"
+                    android:layout_marginLeft="@dimen/half_margin"
                     android:layout_toEndOf="@id/forgot_password_reset_text"
                     />
             </RelativeLayout>
@@ -74,10 +74,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginBottom="@dimen/margin_5"
+                android:layout_marginLeft="@dimen/margin_5"
+                android:layout_marginRight="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_10">
 
                 <Button
                     android:id="@+id/forgot_password_resert_button"
@@ -88,8 +88,8 @@
 
                 <com.wang.avi.AVLoadingIndicatorView
                     android:id="@+id/forgot_password_progress_bar"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="@dimen/prodgres_bar"
+                    android:layout_height="@dimen/prodgres_bar"
                     android:elevation="2dp"
                     app:indicatorName="LineSpinFadeLoaderIndicator"
                     android:layout_centerInParent="true"
