--- a/SportsSideKick/app/src/main/res/layout/activity_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_login.xml
@@ -18,8 +18,8 @@
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/progress_bar_width"
+        android:layout_height="@dimen/progress_bar_height"
         android:layout_centerInParent="true"
         android:elevation="2dp"
         android:visibility="gone"
