--- a/SportsSideKick/app/src/main/res/layout/fragment_initial.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_initial.xml
@@ -13,14 +13,14 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="160dp"
+            android:layout_height="@dimen/login_logo_height"
             android:contentDescription="@null"
             android:src="@drawable/logo_sporting" />
 
         <include layout="@layout/slide_text_login"/>
 
         <LinearLayout
-            android:layout_width="220dp"
+            android:layout_width="@dimen/login_conteiner_width"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -43,10 +43,10 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
+            android:layout_height="@dimen/standard_button_height"
             android:contentDescription="@null"
             android:src="@drawable/logo_ssk"
-            android:layout_margin="@dimen/login_logo_ssk"/>
+            android:layout_margin="@dimen/margin_15"/>
     </LinearLayout>
 
 </RelativeLayout>
