--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -20,7 +20,7 @@
         <include layout="@layout/slide_text_login"/>
 
         <LinearLayout
-            android:layout_width="220dp"
+            android:layout_width="@dimen/login_conteiner_width"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -46,10 +46,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="10dp">
+                android:layout_marginBottom="@dimen/margin_5"
+                android:layout_marginLeft="@dimen/margin_5"
+                android:layout_marginRight="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_10">
 
                 <Button
                     android:id="@+id/login_login_button"
@@ -60,8 +60,8 @@
 
                 <com.wang.avi.AVLoadingIndicatorView
                     android:id="@+id/login_login_progress_bar"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="@dimen/prodgres_bar"
+                    android:layout_height="@dimen/prodgres_bar"
                     android:elevation="2dp"
                     app:indicatorName="LineSpinFadeLoaderIndicator"
                     android:layout_centerInParent="true"
@@ -74,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login_login_forgot_text"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/margin_5"
                 android:textAlignment="center"
                 android:textColor="@color/lightGrey"
                 android:textSize="12sp"/>
@@ -83,7 +83,7 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
+            android:layout_height="@dimen/standard_button_height"
             android:layout_margin="@dimen/login_logo_ssk"
             android:contentDescription="@null"
             android:src="@drawable/logo_ssk" />
