--- a/SportsSideKick/app/src/main/res/layout/fragment_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_rumours.xml
@@ -7,8 +7,8 @@
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
         app:indicatorName="LineSpinFadeLoaderIndicator"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/prodgres_bar"
+        android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
         android:elevation="2dp"
         android:visibility="gone"/>
@@ -31,7 +31,7 @@
                 <ImageView
                     android:id="@+id/fragment_rumors_top_image"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
+                    android:layout_height="@dimen/rumours_top_image_heihgt"
                     android:background="@drawable/img_rumours_top_image" />
 
                 <TextView
