--- a/SportsSideKick/app/src/main/res/layout/fragment_sign_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,21 +5,21 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="280dp"
+        android:layout_width="@dimen/sign_up_container_width"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@drawable/sign_up_background"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="60dp">
+        android:layout_marginTop="@dimen/margin_60"
+        android:layout_marginBottom="@dimen/margin_60">
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/sign_up_facebook"
             style="@style/button_facebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
+            android:layout_margin="@dimen/margin_30"
             android:text="@string/sign_up_facebook" />
 
         <RelativeLayout
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="3dp"
+                android:layout_marginRight="@dimen/half_margin"
                 android:layout_toStartOf="@id/sign_up_text"
                 android:background="@android:color/white" />
 
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="@dimen/half_margin"
                 android:layout_toEndOf="@id/sign_up_text"
                 android:background="@android:color/white" />
         </RelativeLayout>
@@ -61,9 +61,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginLeft="@dimen/margin_30"
+                android:layout_marginRight="@dimen/margin_30"
+                android:layout_marginTop="@dimen/margin_5"
                 android:orientation="vertical">
 
                 <EditText
@@ -113,7 +113,7 @@
                     android:hint="@string/sign_up_passwoed"
                     android:inputType="textPassword"
                     style="@style/sign_up_edit_text"
-                    android:layout_marginBottom="20dp" />
+                    android:layout_marginBottom="@dimen/margin_20" />
             </LinearLayout>
         </ScrollView>
 
@@ -122,10 +122,10 @@
             style="@style/button_login_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginLeft="@dimen/margin_20"
+            android:layout_marginRight="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_20"
             android:text="@string/sign_up_sign_up"
             android:textAllCaps="true" />
 
@@ -135,9 +135,9 @@
             android:layout_height="wrap_content"
             android:text="@string/sign_up_text"
             android:textAlignment="center"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginBottom="@dimen/margin_15"
+            android:layout_marginLeft="@dimen/margin_20"
+            android:layout_marginRight="@dimen/margin_20"
             android:layout_marginTop="0dp"
             android:textColor="@color/lightGrey"/>
 
