--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -14,15 +14,15 @@
     <RelativeLayout
         android:id="@+id/fragment_wall_bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:background="@color/colorPrimary"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
         <Button
             android:id="@+id/fragment_wall_new_post"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/wall_button_size"
+            android:layout_height="@dimen/wall_button_size"
             android:background="@drawable/wall_new_post_selector"
             android:layout_marginStart="@dimen/padding_16"
             android:layout_marginEnd="@dimen/padding_8"
@@ -30,8 +30,8 @@
 
         <Button
             android:id="@+id/fragment_wall_notification"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/wall_button_size"
+            android:layout_height="@dimen/wall_button_size"
             android:background="@drawable/wall_notification_selector"
             android:layout_toEndOf="@id/fragment_wall_new_post"
             android:layout_marginStart="@dimen/padding_8"
@@ -40,8 +40,8 @@
 
         <Button
             android:id="@+id/fragment_wall_filter"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/wall_button_size"
+            android:layout_height="@dimen/wall_button_size"
             android:background="@drawable/wall_filter_selector"
             android:layout_toEndOf="@id/fragment_wall_notification"
             android:layout_marginStart="@dimen/padding_8"
@@ -50,8 +50,8 @@
 
         <Button
             android:id="@+id/fragment_wall_following"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/wall_button_size"
+            android:layout_height="@dimen/wall_button_size"
             android:background="@drawable/wall_following_selector"
             android:layout_toEndOf="@id/fragment_wall_filter"
             android:layout_marginStart="@dimen/padding_8"
@@ -60,8 +60,8 @@
 
         <Button
             android:id="@+id/fragment_wall_search"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/wall_button_size"
+            android:layout_height="@dimen/wall_button_size"
             android:background="@drawable/wall_search_selector"
             android:layout_toEndOf="@id/fragment_wall_following"
             android:layout_marginStart="@dimen/padding_8"
@@ -70,8 +70,8 @@
 
         <Button
             android:id="@+id/fragment_wall_full_screen"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/wall_button_size"
+            android:layout_height="@dimen/wall_button_size"
             android:background="@drawable/ic_fullscreen"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
