--- a/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
@@ -19,24 +19,24 @@
 
         <Button
             android:id="@+id/refresh_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:background="@drawable/refresh_button_left" />
 
         <Button
             android:id="@+id/share_to_wall_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:background="@drawable/share_to_wall" />
 
         <Button
             android:id="@+id/back_button"
-            android:layout_width="24dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/standard_button_width_half"
+            android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:alpha="0.5"
@@ -45,8 +45,8 @@
 
         <Button
             android:id="@+id/forward_button"
-            android:layout_width="24dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/standard_button_width_half"
+            android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:alpha="0.5"
@@ -55,8 +55,8 @@
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/prodgres_bar"
+        android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
         android:elevation="2dp"
         android:visibility="gone"
