--- a/SportsSideKick/app/src/main/res/layout/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_item.xml
@@ -6,14 +6,14 @@
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="@dimen/friend_item_image"
+        android:layout_height="@dimen/friend_item_image"
         android:layout_centerHorizontal="true" />
 
     <ImageView
         android:id="@+id/online_status"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="@dimen/friend_item_image"
+        android:layout_height="@dimen/friend_item_image"
         android:layout_centerHorizontal="true"
         android:src="@drawable/online_status"
         android:visibility="gone"/>
@@ -22,13 +22,15 @@
         android:id="@+id/profil_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/avatar"
         android:gravity="center_horizontal"
         android:maxLines="2"
         android:lines="2"
         android:ellipsize="end"
         android:textColor="@color/white"
         android:textSize="14sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_below="@id/avatar"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
