--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="@dimen/margin_20"
     android:layout_height="60dp">
 
     <ImageView
         android:id="@+id/profile_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/margin_20"
         android:layout_centerHorizontal="true"
         android:src="@drawable/demo_profile_image"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/profile_image"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true">
@@ -36,7 +37,7 @@
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/margin_5"
         android:layout_height="wrap_content"
         android:layout_below="@+id/name"
         android:layout_toEndOf="@+id/date_prefix"
@@ -50,8 +51,8 @@
         android:layout_height="match_parent"
         android:layout_toStartOf="@+id/confirm_button"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="@dimen/margin_30"
+        android:layout_marginEnd="@dimen/margin_10"
         android:background="@null"
         android:scaleType="centerInside"
         android:src="@drawable/remove_button" />
@@ -62,8 +63,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="@dimen/margin_30"
+        android:layout_marginEnd="@dimen/margin_10"
         android:background="@null"
         android:scaleType="centerInside"
         android:src="@drawable/friend_request_accept" />
