--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="wrap_content"
-    android:paddingTop="5dp"
+    android:paddingTop="@dimen/margin_5"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -10,9 +10,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:id="@+id/profile_image_container"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/message_item_circle_image_size"
+        android:layout_height="@dimen/message_item_circle_image_size"
+        android:layout_marginStart="@dimen/margin_8"
         app:civ_border_width="0dp"
         app:civ_border_color="#FF000000"/>
 
@@ -58,7 +58,7 @@
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_toEndOf="@+id/profile_image"
-        android:layout_marginStart="14dp"
+        android:layout_marginStart="@dimen/margin_15"
         android:layout_below="@+id/content_container"
         android:layout_height="wrap_content"
         android:alpha="0.5"
