--- a/SportsSideKick/app/src/main/res/layout/news_list_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/news_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="130dp"
-    android:layout_margin="10dp">
+    android:layout_margin="@dimen/margin_10">
 <ImageView
     android:id="@+id/image"
     android:layout_width="match_parent"
@@ -11,7 +11,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/news_item_height"
         android:layout_alignParentBottom="true"
         android:background="#ffffff">
         <TextView
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:textColor="@color/colorPrimaryLight"
             android:textStyle="bold"
-            android:padding="5dp"
+            android:padding="@dimen/margin_5"
             android:textAlignment="viewStart"
             android:maxLines="2"
             android:ellipsize="end"
