--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"  android:layout_width="544dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="@dimen/create_chat_width"
     android:layout_height="match_parent"
 
     android:background="@color/colorPrimarySemiLight"
@@ -9,11 +10,12 @@
     <View
         android:id="@+id/top_vertical_spliter"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:layout_centerHorizontal="true" />
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:layout_toStartOf="@+id/top_vertical_spliter"
         android:gravity="center"
         android:text="Create Chat"
@@ -22,37 +24,39 @@
     <TextView
         android:id="@+id/join_a_chat"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:layout_toEndOf="@+id/top_vertical_spliter"
         android:background="@color/colorAccentLight"
         android:gravity="center"
         android:text="Join Chat"
         android:textColor="@color/white_semitransparent" />
+
     <View
         android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_toStartOf="@+id/top_vertical_spliter"
-        android:background="@color/colorAccent"
-        android:layout_alignParentTop="true"
-        android:layout_height="2dp"
-        android:layout_centerHorizontal="true" />
+        android:background="@color/colorAccent" />
+
     <View
         android:layout_width="match_parent"
-        android:layout_toEndOf="@+id/top_vertical_spliter"
-        android:background="@color/colorPrimaryLight"
-        android:layout_alignParentTop="true"
         android:layout_height="2dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_toEndOf="@+id/top_vertical_spliter"
+        android:background="@color/colorPrimaryLight" />
 
     <TextView
         android:id="@+id/chat_name_label"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/create_chat_name_label_height"
         android:layout_below="@+id/top_vertical_spliter"
         android:layout_toStartOf="@+id/top_vertical_spliter"
         android:background="@color/colorPrimary"
         android:foregroundGravity="right"
         android:gravity="center_vertical|end"
-        android:paddingEnd="70dp"
+        android:paddingEnd="@dimen/margin_70"
         android:text="Chat name"
         android:textColor="@color/white" />
 
@@ -75,7 +79,7 @@
     <TextView
         android:id="@+id/caption_label"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/create_chat_caption_label"
         android:layout_below="@+id/chat_name_label"
         android:gravity="center"
         android:text="Add friends to chat"
@@ -84,11 +88,11 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_below="@+id/caption_label"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_split_line">
+        android:layout_above="@+id/bottom_split_line"
+        android:layout_below="@+id/caption_label"
+        android:layout_marginEnd="@dimen/margin_20"
+        android:layout_marginStart="@dimen/margin_20">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/friends_recycler_view"
@@ -100,59 +104,58 @@
     <View
         android:id="@+id/bottom_split_line"
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
         android:layout_height="1dp"
-        android:background="@android:color/black"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/margin_60"
+        android:background="@android:color/black" />
 
     <EditText
         android:id="@+id/search_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:paddingStart="40dp"
-        android:layout_toStartOf="@+id/private_chat_switch"
-        android:lines="1"
+        android:layout_height="@dimen/create_chat_name_label_height"
         android:layout_alignParentBottom="true"
-        android:inputType="text"
+        android:layout_toStartOf="@+id/private_chat_switch"
         android:background="@color/green_dark_2"
         android:gravity="start|center_vertical"
         android:hint="Search for a member"
         android:imeOptions="flagNoExtractUi|actionSearch"
+        android:inputType="text"
+        android:lines="1"
         android:maxLines="1"
+        android:paddingStart="@dimen/padding_40"
         android:textColor="@color/white"
         android:textColorHint="@color/white_semitransparent"
         android:textSize="14sp" />
 
     <Switch
         android:id="@+id/private_chat_switch"
+        android:layout_width="@dimen/create_chat_switch_width"
+        android:layout_height="@dimen/create_chat_name_label_height"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
-        android:gravity="center_vertical|center_horizontal"
         android:layout_toStartOf="@+id/private_chat_label"
-        android:layout_width="80dp"
-        android:layout_height="60dp"/>
+        android:gravity="center_vertical|center_horizontal" />
 
     <TextView
         android:id="@+id/private_chat_label"
         android:layout_width="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_height="@dimen/create_chat_name_label_height"
         android:layout_alignParentBottom="true"
-        android:layout_height="60dp"
+        android:layout_marginEnd="@dimen/margin_10"
+        android:layout_marginStart="@dimen/margin_10"
         android:layout_toStartOf="@+id/confirm_button"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="@color/white" />
 
     <Button
         android:id="@+id/confirm_button"
-        android:layout_width="70dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="30dp"
-        android:background="@drawable/popup_confirmation_button"
-        android:layout_marginEnd="20dp"
+        android:layout_width="@dimen/create_chat_button_width"
+        android:layout_height="@dimen/create_chat_button_height"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        />
+        android:layout_marginBottom="@dimen/margin_15"
+        android:layout_marginEnd="@dimen/margin_20"
+        android:layout_marginStart="@dimen/margin_30"
+        android:background="@drawable/popup_confirmation_button" />
 
 </RelativeLayout>
