--- a/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="60dp"
-    android:layout_marginEnd="90dp"
-    android:layout_marginStart="90dp"
-    android:layout_marginTop="60dp">
+    android:layout_marginBottom="@dimen/margin_60"
+    android:layout_marginEnd="@dimen/margin_90"
+    android:layout_marginStart="@dimen/margin_90"
+    android:layout_marginTop="@dimen/margin_60">
 
     <!-- VIEW IN MIDDLE TO SPLIT EASIER -->
     <View
@@ -18,7 +18,7 @@
     <TextView
         android:id="@+id/your_profile_button"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:background="@color/colorPrimarySemiLight"
         android:gravity="center"
         android:text="@string/friend_profile"
@@ -58,23 +58,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp">
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_30"
+            android:layout_marginStart="@dimen/margin_30"
+            android:layout_marginTop="@dimen/margin_30">
 
             <RelativeLayout
                 android:id="@+id/profile_image_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingEnd="20dp"
-                android:paddingStart="20dp">
+                android:paddingEnd="@dimen/margin_20"
+                android:paddingStart="@dimen/margin_20">
 
                 <ProgressBar
                     android:id="@+id/progressBar"
                     style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="@dimen/popup_friend_profil_progress_bar_size"
+                    android:layout_height="@dimen/popup_friend_profil_progress_bar_size"
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/circle_shape"
                     android:indeterminate="false"
@@ -83,8 +83,8 @@
                     android:progressDrawable="@drawable/circular_progress_bar" />
 
                 <ImageView
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
+                    android:layout_width="@dimen/popup_friend_profil_profile_image_size"
+                    android:layout_height="@dimen/popup_friend_profil_profile_image_size"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:src="@drawable/demo_profile_image"
@@ -92,8 +92,8 @@
             </RelativeLayout>
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/profile_level_marker_size"
+                android:layout_height="@dimen/profile_level_marker_size"
                 android:layout_alignEnd="@id/profile_image_container"
                 android:layout_alignStart="@id/profile_image_container"
                 android:layout_below="@id/profile_image_container"
@@ -102,8 +102,8 @@
                 android:contentDescription="@string/image" />
 
             <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/profile_level_marker_size"
+                android:layout_height="@dimen/profile_level_marker_size"
                 android:layout_alignEnd="@id/profile_image_container"
                 android:layout_alignStart="@id/profile_image_container"
                 android:layout_below="@id/profile_image_container"
@@ -119,7 +119,7 @@
                 android:layout_alignEnd="@id/profile_image_container"
                 android:layout_alignStart="@id/profile_image_container"
                 android:layout_below="@id/profile_image_container"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/margin_15"
                 android:gravity="center"
                 android:text="Football Fann Name"
                 android:textColor="@color/white"
@@ -133,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/profile_container"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="@dimen/margin_30"
             android:layout_toEndOf="@+id/profile_container"
             android:layout_toStartOf="@+id/center_split_line"
             android:orientation="horizontal">
@@ -149,7 +149,7 @@
                 android:id="@+id/contact_info_caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/margin_10"
                 android:text="@string/contact_info"
                 android:textColor="@color/colorAccent" />
             <TextView
@@ -174,7 +174,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/contact_info_phone"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/margin_10"
                 android:text="@string/member_since"
                 android:textColor="@color/colorAccent" />
             <TextView
@@ -189,7 +189,7 @@
                 android:id="@+id/location_caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/margin_10"
                 android:layout_toEndOf="@+id/text_center"
                 android:text="@string/location_caption"
                 android:textColor="@color/colorAccent" />
@@ -237,10 +237,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/left_horizontal_split_line"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_60"
+            android:layout_marginStart="@dimen/margin_60"
+            android:layout_marginTop="@dimen/margin_30"
             android:layout_toStartOf="@+id/center_split_line">
 
             <RelativeLayout
@@ -289,7 +289,7 @@
                 android:id="@+id/caps_progress_bar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
-                android:layout_height="12dp"
+                android:layout_height="@dimen/popup_friend_profil_progress_bar_height"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="-5dp"
                 android:layout_marginStart="-5dp"
@@ -310,13 +310,13 @@
 
                 <ImageView
                     android:id="@+id/next_level_background"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/popup_friend_profil_next_level_background_size"
+                    android:layout_height="@dimen/popup_friend_profil_next_level_background_size"
                     android:src="@drawable/next_level_marker" />
 
                 <TextView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="@dimen/popup_your_friends_next_level_cointainer_text_size"
+                    android:layout_height="@dimen/popup_your_friends_next_level_cointainer_text_size"
                     android:layout_centerInParent="true"
                     android:gravity="center"
                     android:text="99"
@@ -334,14 +334,14 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
         android:layout_below="@+id/top_split_line"
-        android:layout_margin="30dp"
+        android:layout_margin="@dimen/margin_30"
         android:layout_toEndOf="@+id/center_split"/>
 
     <!-- BOTTOM BUTTONS CONTAINER -->
     <RelativeLayout
         android:id="@+id/bottom_buttons_container"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/popup_friend_request_bottom_buttons_container_height"
         android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/content_container"
@@ -360,8 +360,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_10"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/popup_confirmation_button" />
@@ -371,8 +371,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginStart="@dimen/margin_10"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/block" />
@@ -382,15 +382,15 @@
             android:layout_centerVertical="true"
             android:gravity="center_vertical|center_horizontal"
             android:layout_toStartOf="@+id/private_chat_label"
-            android:layout_width="80dp"
-            android:layout_height="60dp"/>
+            android:layout_width="@dimen/popup_manage_chat_private_chat_switch_width"
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/private_chat_label"
             android:layout_width="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_10"
             android:layout_alignParentBottom="true"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/unfriend_button"
             android:text="@string/following_member"
             android:gravity="center_vertical|center_horizontal"
@@ -401,8 +401,8 @@
             android:layout_height="match_parent"
             android:layout_toStartOf="@+id/confirm_button"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_10"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/unfriend" />
