--- a/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_requests.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="450dp"
-    android:layout_height="400dp"
+    android:layout_width="@dimen/popup_friend_request_width"
+    android:layout_height="@dimen/popup_friend_request_height"
     android:background="@drawable/popup_bottom_background_dark"
     android:orientation="vertical">
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:gravity="center"
         android:text="@string/friend_requests"
         android:textColor="@color/colorAccent" />
@@ -28,13 +28,13 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/caption"
         android:layout_above="@+id/bottom_buttons_container"
-        android:layout_margin="20dp" />
+        android:layout_margin="@dimen/margin_20" />
 
     <ImageView
         android:id="@+id/close"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="@dimen/popup_friend_request_button_size"
+        android:layout_height="@dimen/popup_friend_request_button_size"
+        android:layout_marginEnd="@dimen/margin_10"
         android:layout_alignParentTop="true"
         android:layout_alignBottom="@+id/top_split_line"
         android:layout_alignParentEnd="true"
@@ -44,7 +44,7 @@
     <RelativeLayout
         android:id="@+id/bottom_buttons_container"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/popup_friend_request_bottom_buttons_container_height"
         android:layout_alignParentBottom="true">
 
         <View
@@ -62,8 +62,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_10"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/popup_confirmation_button" />
