--- a/SportsSideKick/app/src/main/res/layout/popup_language.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_language.xml
@@ -32,12 +32,12 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
         android:layout_below="@+id/caption"
-        android:layout_margin="20dp">
+        android:layout_margin="@dimen/margin_20">
 
         <ImageView
             android:id="@+id/english_background"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/popup_language_image_element_size"
+            android:layout_height="@dimen/popup_language_image_element_size"
             android:layout_alignParentStart="true"
             android:scaleType="fitCenter"
             android:src="@drawable/lang_backing"
@@ -51,7 +51,7 @@
             android:layout_alignEnd="@+id/english_background"
             android:layout_alignStart="@+id/english_background"
             android:layout_alignTop="@+id/english_background"
-            android:paddingTop="3dp"
+            android:paddingTop="@dimen/margin_5"
             android:scaleType="fitCenter"
             android:src="@drawable/english" />
 
@@ -68,8 +68,8 @@
 
         <ImageView
             android:id="@+id/chinese_background"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/popup_language_image_element_size"
+            android:layout_height="@dimen/popup_language_image_element_size"
             android:layout_centerHorizontal="true"
             android:scaleType="fitCenter"
             android:src="@drawable/lang_backing"
@@ -83,7 +83,7 @@
             android:layout_alignEnd="@+id/chinese_background"
             android:layout_alignStart="@+id/chinese_background"
             android:layout_alignTop="@+id/chinese_background"
-            android:paddingTop="3dp"
+            android:paddingTop="@dimen/margin_5"
             android:scaleType="fitCenter"
             android:src="@drawable/chinese" />
 
@@ -100,8 +100,8 @@
 
         <ImageView
             android:id="@+id/portuguese_background"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/popup_language_image_element_size"
+            android:layout_height="@dimen/popup_language_image_element_size"
             android:layout_alignParentEnd="true"
             android:scaleType="fitCenter"
             android:src="@drawable/lang_backing"
@@ -115,7 +115,7 @@
             android:layout_alignEnd="@+id/portuguese_background"
             android:layout_alignStart="@+id/portuguese_background"
             android:layout_alignTop="@+id/portuguese_background"
-            android:paddingTop="3dp"
+            android:paddingTop="@dimen/margin_5"
             android:scaleType="fitCenter"
             android:src="@drawable/portuguese" />
 
@@ -136,7 +136,7 @@
     <RelativeLayout
         android:id="@+id/bottom_buttons_container"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
         android:layout_alignParentBottom="true"
         android:background="@drawable/popup_bottom_background">
 
@@ -155,8 +155,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_10"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/popup_confirmation_button" />
