--- a/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
@@ -2,16 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="60dp"
-    android:layout_marginEnd="90dp"
-    android:layout_marginStart="90dp"
-    android:layout_marginTop="60dp">
+    android:layout_marginBottom="@dimen/margin_60"
+    android:layout_marginEnd="@dimen/margin_90"
+    android:layout_marginStart="@dimen/margin_90"
+    android:layout_marginTop="@dimen/margin_60">
 
     <!-- TOP BUTTONS CONTAINER -->
     <RelativeLayout
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimarySemiLight"
         android:orientation="horizontal">
@@ -34,7 +34,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
-            android:layout_margin="17dp"
+            android:layout_margin="@dimen/margin_15"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_close" />
@@ -59,9 +59,9 @@
             android:id="@+id/friends_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="15dp" />
+            android:layout_marginLeft="@dimen/margin_20"
+            android:layout_marginRight="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_15" />
 
     </RelativeLayout>
 
@@ -70,7 +70,7 @@
     <RelativeLayout
         android:id="@+id/bottom_buttons_container"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/popup_your_friends_bottom_buttons_container"
         android:layout_alignParentBottom="true"
         android:background="@drawable/popup_bottom_background">
 
@@ -89,15 +89,15 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_10"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/popup_confirmation_button" />
 
         <RelativeLayout
             android:id="@+id/search_container"
-            android:layout_width="200dp"
+            android:layout_width="@dimen/popup_your_friends_search_container"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:background="@drawable/popup_bottom_left_background">
@@ -108,14 +108,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="@dimen/margin_20"
                 android:src="@drawable/popup_search_icon" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/margin_10"
                 android:layout_toRightOf="@id/search_icon"
                 android:background="@color/green_dark_2"
                 android:hint="@string/your_friends_search_hint"
@@ -132,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:layout_margin="13dp"
+            android:layout_margin="@dimen/margin_15"
             android:layout_toRightOf="@id/search_container"
             android:src="@drawable/add_friend_button" />
 
@@ -146,8 +146,8 @@
                 android:id="@+id/requests_number"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="13dp"
-                android:layout_marginTop="13dp">
+                android:layout_marginBottom="@dimen/margin_15"
+                android:layout_marginTop="@dimen/margin_15">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -172,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/margin_10"
                 android:layout_toRightOf="@id/requests_number"
                 android:gravity="center_vertical"
                 android:text="@string/your_friends_request"
