--- a/SportsSideKick/app/src/main/res/layout/popup_your_statement.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_statement.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="400dp"
-    android:layout_height="400dp"
+    android:layout_width="@dimen/popup_your_statement_size"
+    android:layout_height="@dimen/popup_your_statement_size"
     android:background="@drawable/popup_bottom_background"
     android:orientation="vertical">
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/standard_button_height"
         android:gravity="center"
         android:text="@string/your_statement"
         android:textColor="@color/colorAccent" />
@@ -28,13 +28,13 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/caption"
-        android:layout_margin="20dp" />
+        android:layout_margin="@dimen/margin_20" />
 
     <ImageView
         android:id="@+id/close"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="@dimen/popup_manage_chat_private_confirm_button_height"
+        android:layout_height="@dimen/popup_manage_chat_private_confirm_button_height"
+        android:layout_marginEnd="@dimen/margin_10"
         android:layout_alignParentTop="true"
         android:layout_alignBottom="@+id/top_split_line"
         android:layout_alignParentEnd="true"
