--- a/SportsSideKick/app/src/main/res/layout/row_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_rumours.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:paddingStart="4dp"
+        android:paddingStart="@dimen/half_margin"
         android:paddingEnd="@dimen/padding_8"
         android:paddingTop="@dimen/padding_8"
         android:paddingBottom="@dimen/padding_8"
@@ -23,8 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toStartOf="@id/row_rumors_time"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
+        android:paddingStart="@dimen/half_margin"
+        android:paddingEnd="@dimen/half_margin"
         android:paddingTop="@dimen/padding_8"
         android:paddingBottom="@dimen/padding_8"
         android:ellipsize="end"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:paddingStart="@dimen/padding_8"
-        android:paddingEnd="4dp"
+        android:paddingEnd="@dimen/half_margin"
         android:paddingTop="@dimen/padding_8"
         android:paddingBottom="@dimen/padding_8"
         android:ellipsize="end"
