--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -202,12 +202,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_right_container"
-        android:layout_below="@+id/right_top_bar_container"
         android:layout_marginBottom="@dimen/margin_8"
         android:layout_marginStart="@dimen/half_margin"
         android:layout_toEndOf="@+id/middle_split"
         android:layout_toStartOf="@+id/right_tab_selector"
-        android:background="@color/green_dark_1"></RelativeLayout>
+        android:background="@color/green_dark_1"/>
 
         <!-- CLUB CONTAINER -->
         <RelativeLayout
@@ -216,18 +215,12 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/margin_8"
+            android:layout_marginStart="@dimen/half_margin"
             android:layout_toEndOf="@+id/middle_split"
             android:layout_toStartOf="@+id/right_tab_selector"
             android:background="@color/green_dark_1" />
 
-    <RadioGroup
-        android:id="@+id/left_tab_selector"
-        android:layout_width="@dimen/main_buttons_bar_width"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/left_top_bar_container"
-        android:gravity="top"
-        android:orientation="vertical">
+
         <!-- TOP RIGHT RADIO GROUP -->
         <RadioGroup
             android:id="@+id/right_tab_selector"
