--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
@@ -21,11 +21,12 @@
     </android.support.percent.PercentRelativeLayout>
     <!--  /\/\/\/\/\/\/\ -->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/club_radio_caption"
-        android:textColor="@color/white"
-        android:textSize="36sp" />
+    <!-- Items -->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_alignTop="@+id/video_player_dummy_container"
+        android:layout_alignBottom="@+id/video_player_dummy_container"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/full_margin" />
 </RelativeLayout>
